sdd some test file & fix api
