# routes/profile.js
@@ -18,7 +18,8 @@ router.get("/getProfile/:userId/:lang",auth, async(req, res) => {
 router.get("/getPeriodInfo/:userId/:lang",auth, async(req, res) => {
   
   const uProfile = await user_profile.findOne({
-    attributes: ['user_id','avg_cycle_length','avg_period_length','pms_length','pregnant','pregnancy_try','last_period_date'],
+    attributes: ['user_id','avg_cycle_length','avg_period_length','pms_length','pregnant',
+    'pregnancy_try','last_period_date','ovulation_prediction','period_prediction','red_days'],
     where: {
       user_id: req.params.userId,
     },
@@ -30,7 +31,7 @@ router.get("/getPeriodInfo/:userId/:lang",auth, async(req, res) => {
 router.get("/getGeneralInfo/:userId/:lang",auth, async(req, res) => {
   
   const uProfile = await user_profile.findOne({
-    attributes: ['user_id','height','weight','avg_sleeping_hour','blood_type','use_lock'],
+    attributes: ['user_id','height','weight','avg_sleeping_hour','blood_type','locked','birthdate'],
     where: {
       user_id: req.params.userId,
     },
@@ -50,13 +51,17 @@ router.put("/editProfile/:userId/:lang",auth, async(req, res) => {
       weight:req.body.weight,
       avg_sleeping_hour:req.body.sleepingHour,
       blood_type:req.body.bloodType,
-      use_lock:req.body.useLock,
+      locked:req.body.isLock,
       avg_cycle_length:req.body.cycleLength,
       avg_period_length:req.body.periodLength,
       pms_length:req.body.pmsLength,
       pregnant:req.body.pregnant,
       pregnancy_try:req.body.pregnancyTry,
-      last_period_date:new Date(req.body.lastPeriodDate)
+      last_period_date:new Date(req.body.lastPeriodDate),
+      ovulation_prediction:req.body.ovulationPred,
+      period_prediction:req.body.periodPred,
+      red_days:req.body.redDays
+      
     },{
     where: {
       user_id: req.params.userId
@@ -76,7 +81,10 @@ router.put("/editPeriodInfo/:userId/:lang",auth, async(req, res) => {
       pms_length:req.body.pmsLength,
       pregnant:req.body.pregnant,
       pregnancy_try:req.body.pregnancyTry,
-      last_period_date:new Date(req.body.lastPeriodDate)
+      last_period_date:new Date(req.body.lastPeriodDate),
+      ovulation_prediction:req.body.ovulationPred,
+      period_prediction:req.body.periodPred,
+      red_days:req.body.redDays
     },{
     where: {
       user_id: req.params.userId
@@ -97,7 +105,7 @@ router.put("/editGeneralInfo/:userId/:lang",auth, async(req, res) => {
       weight:req.body.weight,
       avg_sleeping_hour:req.body.sleepingHour,
       blood_type:req.body.bloodType,
-      use_lock:req.body.useLock
+      locked:req.body.isLock
     },{
     where: {
       user_id: req.params.userId
@@ -134,7 +142,7 @@ router.post("/addProfile/:lang",auth, async(req, res) => {
       weight:req.body.weight,
       avg_sleeping_hour:req.body.sleepingHour,
       blood_type:req.body.bloodType,
-      use_lock:req.body.useLock,
+      locked:req.body.isLock,
       avg_cycle_length:req.body.cycleLength,
       avg_period_length:req.body.periodLength,
       pms_length:req.body.pmsLength,
@@ -191,7 +199,7 @@ router.put("/updateUserStatus/:userId/:lang",auth,async(req,res)=>{
 
 router.get("/lockStatus/:userId/:lang",auth,async(req,res)=>{
   const useLock = await user_profile.findOne({
-    attributes:['use_lock'],
+    attributes:['locked'],
     where: {
       user_id: req.params.userId,
     },
@@ -202,7 +210,7 @@ router.get("/lockStatus/:userId/:lang",auth,async(req,res)=>{
 
 router.put("/setLock/:userId/:lang",auth,async(req,res)=>{
   if(req.body.isLock==0||req.body.isLock==1){
-    const useLock = await user_profile.update({use_lock:req.body.isLock},
+    const useLock = await user_profile.update({locked:req.body.isLock},
       { where: {
         user_id: req.params.userId,
       },
